<resources>
    <string name="app_name">Scripture Baseball</string>
    <string-array name="BoM_Books">
        <item>1 Nephi</item>
        <item>2 Nephi</item>
        <item>Jacob</item>
        <item>Enos</item>
        <item>Jarom</item>
        <item>Omni</item>
        <item>Words of Mormon</item>
        <item>Mosiah</item>
        <item>Alma</item>
        <item>Helaman</item>
        <item>3 Nephi</item>
        <item>4 Nephi</item>
        <item>Mormon</item>
        <item>Ether</item>
        <item>Moroni</item>
    </string-array>
    <string name="Nonexistant_Guess">That chapter does not exist</string>
    <string name="Wrong_Book">Incorrect Book</string>
    <string name="Higher">Right Book, Higher Chapter</string>
    <string name="Lower">Right Book, Lower Chapter</string>
    <string name="Correct">Correct!</string>
    <string name="Score">Score</string>
    <string name="Guesses_Remaining">Guesses</string>
    <string name="Guess">Guess</string>
    <string name="Next_Verse">Next Verse!</string>
    <string name="Game_Over">Try Again!</string>
    <string name="Display_Correct">The Correct Chapter is</string>
    <string name="Welcome">Welcome to Scripture Baseball!</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="input_hint">Chapter</string>
    <string name="Link_Button">Read this verse in context</string>
    <string name="Difficult_Choice">Choose a Difficulty to Begin</string>
    <string name="Invitation">Learn More About the Book of Mormon</string>
    <string name="Come_Unto_Christ_Link">https://www.churchofjesuschrist.org/comeuntochrist</string>
    <string name="Author_Tag">App Designed by Nathan Omerza</string>
    <string name="About">About</string>
    <string name="Privacy_Button">Privacy Notice</string>
</resources>