<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextDisplayView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:text="Hello World!"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/chapter_input"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/book_chooser"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/BoM_Books"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Guess_Result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="12dp"
        android:onClick="onClick"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/book_chooser"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/chapter_input"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="266dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/input_hint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Guess_Result"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/verse_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="35dp"
        android:text="TextView"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="134dp"
        app:layout_constraintBottom_toTopOf="@+id/chapter_input"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Guess_Result"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="110dp"
        android:text="@string/Nonexistant_Guess"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Score_Displayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score_Title" />

    <TextView
        android:id="@+id/Score_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="19dp"
        android:text="@string/Score"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Guesses_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Guesses_Remaining"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Remaining_Guesses_Displayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Guesses_Title" />

    <Button
        android:id="@+id/link_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:onClick="onLinkButtonClick"
        android:text="@string/Link_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Guess_Result" />

</androidx.constraintlayout.widget.ConstraintLayout>